# beancount-importer-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  autopush.sh  error.rs  tmp.txt
config/: alipay.yml  ccb.yml  futu.yml  global.yml  icbc.yml  jd.yml  mt.yml  wechat.yml  yinhe.yml
config-new/: galaxy.yml
docs/: 供应商扩展指南.md  开发与调试手册.md  架构设计.md  配置详解.md
examples/: README.md
examples/alipay/: advanced.yml  basic.yml
examples/ccb/: advanced.yml  basic.yml
examples/icbc/: advanced.yml  basic.yml
examples/jd/: advanced.yml  basic.yml
examples/mt/: advanced.yml  basic.yml
examples/wechat/: advanced.yml  basic.yml
mapping/: ccb.yml  futu.yml  icbc.yml  jd.yml  mt.yml  wechat.yml  yinhe.yml
src/: error.rs  lib.rs  main.rs
src/config/: alipay.yml  ccb.yml  futu.yml  global.yml  icbc.yml  jd.yml  mt.yml  wechat.yml  yinhe.yml
src/interface/: mod.rs  provider.rs
src/mapping/: alipay.yml  yinhe.yml
src/model/: mod.rs
src/model/account/: amount.rs  cost.rs  mod.rs  posting.rs  price.rs
src/model/cli/: args.rs  log_level.rs  mod.rs
src/model/config/: csv_options.rs  global.rs  meta_value.rs  mod.rs  output.rs  provider.rs
src/model/data/: mod.rs  raw_record.rs
src/model/mapping/: field_mapping.rs  field_spec.rs  mod.rs
src/providers/: mod.rs
src/runtime/: config_loader.rs  currency.rs  mod.rs  pipeline.rs  pnl.rs  sorting.rs
src/utils/: date.rs  decimal.rs  encoding.rs  init.rs  metadata.rs  mod.rs
testsets/: 京东交易流水测试数据集.csv  工商银行交易明细测试数据集.csv  建设银行交易明细测试数据集.csv  微信支付账单测试数据集.csv  支付宝交易明细测试数据集.csv  白盒测试数据集说明.md  美团账单测试数据集.csv
(+57 files in other folders)
