[package]
name = "beancount-importer-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
anyhow = "1.0" # error handling
serde_yaml = "0.9.34"
regex = "1.12.2"
rust_decimal_macros = "1.40.0"
thiserror = "2.0.18"
once_cell = "1.21.3"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
log = "0.4.29"
env_logger = "0.11.8"
calamine = "0.26"


